<resources>
    <string name="app_name">DeveemSecondTechTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cars">Машины</string>
    <string name="wallet">Кошелек</string>
    <string name="main">Главная</string>
    <string name="settings">Настройки</string>
    <string name="more">Еще</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_day">Добрый день,</string>
    <string name="alexei">Алексей!</string>
    <string name="on_your_account">У вас на счету</string>
    <string name="bonus">бонусов</string>
    <string name="my_avto">Мои авто</string>
    <string name="all_avto">Все Авто</string>
    <string name="c_065_mk_77">C 065 MK 77</string>
    <string name="mercedes_benz">Mercedes-Benz</string>
    <string name="_54_000_km">54 000 km</string>
    <string name="statistics">Статистика</string>
    <string name="mileage">Пробег</string>
    <string name="update">Обновить</string>
    <string name="promotion">Акции</string>
    <string name="all_promotions">Все акции</string>
    <string name="recommended_products">Рекомендуемые товары</string>
    <string name="to_the_store">В магазин</string>
    <string name="appointment">Запись на ТО</string>
    <string name="create_event">Создать событие</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="creation_event">Создание события</string>
    <string name="_00">00</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="mch">мч</string>
    <string name="gas_station">Заправка</string>
    <string name="fine">Штраф</string>
    <string name="dry_cleaning">Химчистка</string>
    <string name="products">Товары</string>
    <string name="plus_10">+ еще 10</string>
    <string name="dtp">ДТП</string>
    <string name="repair">Ремонт</string>
    <string name="cleaning">Мойка</string>
    <string name="place">Место</string>
    <string name="address">Укажите на адрес или выберите на карте</string>
    <string name="count">Количество</string>
    <string name="price_">Цена</string>
    <string name="sum">Сумма</string>
    <string name="type_of_fuel">Вид топлива</string>
    <string name="bensin">Бензин АИ-98</string>
    <string name="date_of_event">Дата события</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="oil_leaking">Течет масло</string>
    <string name="add_photo">Добавить фото</string>
    <string name="done">Готово</string>
    <string name="n10zic_x9_5w_30">Моторное масло \n10ZIC X9 5W-30</string>
    <string name="permanent_promotion">постоянная акция</string>
    <string name="free_change_of_oil">Бесплатная замена масла +\nдиагностика автомобиля</string>
    <string name="until_30_april">Только до 30 апреля</string>
    <string name="_156_500">156 500 км</string>
</resources>