<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_36dp"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_36dp"
                    android:src="@drawable/ic_coin"
                    app:layout_constraintStart_toEndOf="@id/iv_profile"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_36dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_36dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                    app:layout_constraintEnd_toStartOf="@id/iv_search"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_44dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_52dp"
                    android:layout_height="@dimen/_52dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_man" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_4dp"
                        android:text="@string/good_day"
                        android:textColor="#E60D2D3D"
                        android:textSize="@dimen/_16sp"
                        app:layout_constraintEnd_toStartOf="@id/tv_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:text="@string/alexei"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_bonus"
                        style="@style/font_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:text="@string/bonus"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />

                    <TextView
                        android:id="@+id/tv_price"
                        style="@style/font_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:paddingHorizontal="@dimen/_4dp"
                        android:text="@string/price"
                        android:textColor="@color/gold"
                        app:layout_constraintEnd_toStartOf="@id/tv_bonus"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />

                    <TextView
                        style="@style/font_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:text="@string/on_your_account"
                        android:textColor="@color/blue"
                        app:layout_constraintEnd_toStartOf="@id/tv_price"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_28dp">

                <TextView
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/my_avto"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@string/all_avto"
                    android:textColor="@color/cyan"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btn_create_event"
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:background="@drawable/first_button_gradient"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingTop="@dimen/_12dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:paddingBottom="@dimen/_12dp"
                    android:text="@string/create_event"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_appointment"
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:background="@drawable/second_background_gradient"
                    android:paddingStart="@dimen/_32dp"
                    android:paddingTop="@dimen/_12dp"
                    android:paddingEnd="@dimen/_32dp"
                    android:paddingBottom="@dimen/_12dp"
                    android:text="@string/appointment"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                app:ci_drawable="@drawable/ic_indicator_unselected"
                app:ci_drawable_unselected="@drawable/ic_indicator_selected" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_promotion"
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/promotion"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_all_promotions"
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@string/all_promotions"
                    android:textColor="@color/cyan"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp" />

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/promotion_indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                app:ci_drawable="@drawable/ic_indicator_unselected"
                app:ci_drawable_unselected="@drawable/ic_indicator_selected" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_recommended_products"
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/recommended_products"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_to_the_store"
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@string/to_the_store"
                    android:textColor="@color/cyan"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tv_recommended_products"
                    tools:listitem="@layout/item_recommended_products" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>