<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28dp"
        android:src="@drawable/car"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_number_of_avto"
        style="@style/font_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/c_065_mk_77"
        android:textColor="@color/second_grey"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_car" />

    <TextView
        android:id="@+id/tv_name_of_avto"
        style="@style/font_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/mercedes_benz"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number_of_avto" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_avto_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_36dp"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_of_avto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_48dp"
                        android:layout_marginTop="@dimen/_16dp"
                        android:src="@drawable/ic_distance" />

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24dp"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/_54_000_km"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20dp"
                        android:text="@string/statistics"
                        android:textColor="#8E9CA2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_60dp"
                        android:layout_marginTop="@dimen/_16dp"
                        android:src="@drawable/ic_distance" />

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_36dp"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/_54_000_km"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_32dp"
                        android:text="@string/statistics"
                        android:textColor="#8E9CA2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_60dp"
                        android:layout_marginTop="@dimen/_16dp"
                        android:src="@drawable/ic_distance" />

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_36dp"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/_54_000_km"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/font_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_32dp"
                        android:text="@string/statistics"
                        android:textColor="#8E9CA2" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:layout_marginTop="@dimen/_16dp"
                android:background="#F2F2F2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/font_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_26dp"
                    android:text="@string/mileage"
                    android:textColor="@color/blue" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_32dp"
                    android:layout_marginTop="@dimen/_32dp"
                    android:src="@drawable/ic_dot" />

                <TextView
                    style="@style/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_26dp"
                    android:text="@string/_156_500"
                    android:textColor="@color/blue" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/ic_update"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/update"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sp"
                        app:cornerRadius="@dimen/_14dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/gold"
                        app:strokeWidth="@dimen/_1dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>